added canvas ,  overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,12 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Make sure the canvas takes up the full viewport and doesn't overflow */
+#canvas {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
